--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
 spring.data.mongodb.uri=mongodb+srv://admin:mintic@cluster0.qeg0e.mongodb.net/webreciclaje?retryWrites=true&w=majority
+server.port = 9000
